Added student number

--- a/templates/creditspage.html
+++ b/templates/creditspage.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="item">
                     <div class="content">
-                        <div class="header">Lauren Gomes</div>
+                        <div class="header">Lauren Gomes: 500824231</div>
                         <p> Responsibilities: Webpage Development, Semantic UI Implementation, Research and Writing of Webpage Content</p>
                     </div>
                 </div>
