chaned sizes of images

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -25,14 +25,14 @@
                 <p>Semantic UI has a container system that allows for easy division of content. One handy built in function is the
                     'ui top attached menu', which allows for the easy creation of a menu system to navigate your site.
                 </p>
-                <img class="ui centered medium image" src="https://i.imgur.com/NOWFyun.jpg">
+                <img class="ui centered image" src="https://i.imgur.com/NOWFyun.jpg">
                 <h3 class ="ui dividing header"> Seperating Content</h6>
                 <p> When writing up the content of your page, you will surely wish to organize your text in various more attractive ways.
                     Semantic UI allows you to place different topics in different containers, allowing for different headers, bulleted lists,
                     and other visually appealing options.
                 </p>
                 <!--webpagecontainer.jpg-->
-                <img class="ui centered large image" src="https://media.discordapp.net/attachments/500509834026942486/519004084687208456/webpagecontainer.JPG">
+                <img class="ui centered image" src="https://media.discordapp.net/attachments/500509834026942486/519004084687208456/webpagecontainer.JPG">
                 <p> <br/>Semantic UI also has many options for images used in your webpage. Images can be centered or resized without the
                     use of any CSS.
                 </p>
