--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content%}
 <!--BODY CONTENTS-->
 <div class="ui stretched two column grid" style="padding: 2.5em">
-    <h1 class="ui huge header">Strengths and Weaknesses</h1>
+    <h1 class="ui huge header">Overview: Semantic UI and Flask</h1>
     <div class="row">
         <!--Semantic UI-->
         <div class="column">
