--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <h1 class="ui huge header">Overview: Semantic UI and Flask</h1>
     <div class="row">
         <!--Semantic UI-->
-        <div class="column grey">
+        <div class="column">
             <div class="ui raised segments" style="padding: 1em">
 
                 <div class="segment">
