--- a/templates/install.html
+++ b/templates/install.html
@@ -4,8 +4,9 @@
 <div class="ui container">
     <div class="ui stretched one column grid" style="padding: 2.5em">
         <h1 class="ui huge header">Installing Frameworks</h1>
+
+        <!--Flask-->
         <div class="row">
-            <!--Flask-->
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
                     <div class="segment">
@@ -27,7 +28,9 @@
                     </div>
                 </div>
             </div>
-            <!--Semantic-->
+        </div>
+        <!--Semantic-->
+        <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
                     <div class="segment">
@@ -50,7 +53,9 @@
                     </div>
                 </div>
             </div>
-            <!--Heroku-->
+        </div>
+        <!--Heroku-->
+        <div class="row">
             <div class="column">
                 <div class="ui raised segments" style="padding: 1em">
                     <div class="segment">
