--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -1,69 +1,117 @@
 {% extends "layout.html" %}
 {% block content%}
-    <div class="ui grid container">
+<div class="ui container">
+    <div class="ui stretched one column grid" style="padding: 2.5em">
+        <h1 class="ui huge header">Tutorial</h1>
+        <!--Semantic UI-->
         <div class="row">
-            
-            <div class="twenty wide column"style="padding: 2.5em">
-                <h2 class="ui header">Creating a Webpage with SemanticUI</h2>
-                <p>Now that we know the strengths and weaknesses of Semantic UI and Flask, let's create an 
-                    effective webpage using them.
-                </p>
-                <h3 class="ui dividing header">Start with Research</h3>
-                <p>Before you get to coding, research is key. There are a lot of differnt tools unique to Semantic UI
-                    that are useful in creating a webpage. Specific names for classes in order to get a certain look are very common.
-                    Make sure you have a good understanding of your tools first.
-                </p>
-                <h3 class="ui dividing header">The Head</h3>
-                <p> Begin with the head tag of your page. This is where we do the ground work to allow both Semantic UI and Flask 
-                    to be implemented within the page.
-                </p>
-                <img class="ui centered image" src="https://i.imgur.com/eTAHp1R.jpg">
-                <p><br/>The 'stylesheet' link and script are what allow Semantic UI to be used. The code between the % symbols are generated
-                    through Flask.
-                </p>
-                <h3 class="ui dividing header">UI Containers and Menus </h5>
-                <p>Semantic UI has a container system that allows for easy division of content. One handy built in function is the
-                    'ui top attached menu', which allows for the easy creation of a menu system to navigate your site.
-                </p>
-                <img class="ui centered image" src="https://i.imgur.com/NOWFyun.jpg">
-                <h3 class ="ui dividing header"> Seperating Content</h6>
-                <p> When writing up the content of your page, you will surely wish to organize your text in various more attractive ways.
-                    Semantic UI allows you to place different topics in different containers, allowing for different headers, bulleted lists,
-                    and other visually appealing options.
-                </p>
-                <!--webpagecontainer.jpg-->
-                <img class="ui centered image" src="https://media.discordapp.net/attachments/500509834026942486/519004084687208456/webpagecontainer.JPG">
-                <p> <br/>Semantic UI also has many options for images used in your webpage. Images can be centered or resized without the
-                    use of any CSS.
-                </p>
-                <h3 class="ui dividing header"> Final Touches</h3>
-                <p>After you have everything you want on your page set up, finish it up with some nice design touches. Moving things
-                    around and adding divisions is easy with Semantic UI. Add a CSS stylesheet as well for some extra flair, and you're done!
-                </p>
-                <!--Need an image of the final demo page here-->
-                <img class="ui centered image" src="">
+            <div class="column">
+                <div class="ui raised segments" style="padding: 1em">
+                    <div class="segment">
 
-                <h2 class="ui header">Create a simple Flask App</h2>
-                <h3 class="ui dividing header">Make a Flask app</h3>
-                <p>Following the installation of Flask, create a file for running your website with a .py extension</p>
-                <p>Using your favourite editor, enter the following lines of code for your Flask app:</p>
-                <pre><code>from flask import Flask, render_template</code></pre>
-                <pre><code>app = Flask (__name__)</code></pre>
-                <pre><code>@app.route('/')</code></pre>
-                <pre><code>def index():</code></pre>
-                <pre><code>     return render_template('index.html')</code></pre>
-                <pre><code>if __name__ == "__maine__":</code></pre>
-                <pre><code>     app.run(debug=True)</code></pre>
-                <p>NOTE: index.html should instead be the name of your html page that you want Flask to run! (with the .html extension)</p>
-                <p>NOTE: inside <pre><code>app.run()</code></pre> the parentheses can be empty as above, but we put: <pre><code>debug=True</code></pre> for your convenience in developing - as you make changes and save them, you can simply refresh the page (localhost:5000) to view changes!</p>
-
-                <h3 class="ui dividing header">Run your Web App on Flask</h3>
-                <p>Now, in your terminal, run the following command, where <pre><code>filename</code></pre> is instead the chosen name of your flask app</p>
-                <pre><code>python filename</code></pre>
-                <p>On your terminal screen, you will be given a link to view your flask app. Copy paste it into your favourite browser, or simply put into your address bar: localhost:5000</p>
-                <p>This will run the flask app locally and you can see changes from your computer</p>
+                        <h2 class="ui header">Creating a Webpage with SemanticUI</h2>
+                        <p>Now that we know the strengths and weaknesses of Semantic UI and Flask, let's create an
+                            effective webpage using them.
+                        </p>
+                        <h3 class="ui dividing header">Start with Research</h3>
+                        <p>Before you get to coding, research is key. There are a lot of differnt tools unique to
+                            Semantic UI
+                            that are useful in creating a webpage. Specific names for classes in order to get a certain
+                            look
+                            are very common.
+                            Make sure you have a good understanding of your tools first.
+                        </p>
+                        <h3 class="ui dividing header">The Head</h3>
+                        <p> Begin with the head tag of your page. This is where we do the ground work to allow both
+                            Semantic UI
+                            and Flask
+                            to be implemented within the page.
+                        </p>
+                        <img class="ui centered image" src="https://i.imgur.com/eTAHp1R.jpg">
+                        <br />
+                        <p>The 'stylesheet' link and script are what allow Semantic UI to be used. The code
+                            between the %
+                            symbols are generated
+                            through Flask.
+                        </p>
+                        <h3 class="ui dividing header">UI Containers and Menus </h3>
+                        <p>Semantic UI has a container system that allows for easy division of content. One handy
+                            built in
+                            function is the
+                            'ui top attached menu', which allows for the easy creation of a menu system to navigate
+                            your
+                            site.
+                        </p>
+                        <img class="ui centered image" src="https://i.imgur.com/NOWFyun.jpg">
+                        <h3 class="ui dividing header"> Seperating Content</h3>
+                        <p> When writing up the content of your page, you will surely wish to organize your
+                            text in
+                            various more attractive ways.
+                            Semantic UI allows you to place different topics in different containers, allowing
+                            for
+                            different headers, bulleted lists,
+                            and other visually appealing options.
+                        </p>
+                        <!--webpagecontainer.jpg-->
+                        <img class="ui centered image" src="https://media.discordapp.net/attachments/500509834026942486/519004084687208456/webpagecontainer.JPG">
+                        <p> <br />Semantic UI also has many options for images used in your webpage. Images can
+                            be
+                            centered or resized without the
+                            use of any CSS.
+                        </p>
+                        <h3 class="ui dividing header"> Final Touches</h3>
+                        <p>After you have everything you want on your page set up, finish it up with some nice
+                            design
+                            touches. Moving things
+                            around and adding divisions is easy with Semantic UI. Add a CSS stylesheet as well
+                            for some
+                            extra flair, and you're done!
+                        </p>
+                        <!--Need an image of the final demo page here-->
+                        <img class="ui centered image" src="">
+                    </div>
+                </div>
             </div>
-            
+        </div>
+        <!--Flask-->
+        <div class="row">
+            <div class="column">
+                <div class="ui raised segments" style="padding: 1em">
+                    <div class="segment">
+                        <h2 class="ui header">Create a simple Flask App</h2>
+                        <h3 class="ui dividing header">Make a Flask app</h3>
+                        <p>Following the installation of Flask, create a file for running your website with a .py
+                            extension</p>
+                        <p>Using your favourite editor, enter the following lines of code for your Flask app:</p>
+                        <pre><code>from flask import Flask, render_template</code></pre>
+                        <pre><code>app = Flask (__name__)</code></pre>
+                        <pre><code>@app.route('/')</code></pre>
+                        <pre><code>def index():</code></pre>
+                        <pre><code>     return render_template('index.html')</code></pre>
+                        <pre><code>if __name__ == "__maine__":</code></pre>
+                        <pre><code>     app.run(debug=True)</code></pre>
+                        <p>NOTE: index.html should instead be the name of your html page that you want Flask to
+                            run!
+                            (with the .html extension)</p>
+                        <p>NOTE: inside
+                            <pre><code>app.run()</code></pre> the parentheses can be empty as above, but we put:
+                            <pre><code>debug=True</code></pre> for your convenience in developing - as you make
+                            changes
+                            and save them, you can simply refresh the page (localhost:5000) to view changes!</p>
+
+                        <h3 class="ui dividing header">Run your Web App on Flask</h3>
+                        <p>Now, in your terminal, run the following command, where
+                            <pre><code>filename</code></pre> is instead the chosen name of your flask app</p>
+                        <pre><code>python filename</code></pre>
+                        <p>On your terminal screen, you will be given a link to view your flask app. Copy paste it
+                            into
+                            your favourite browser, or simply put into your address bar: localhost:5000</p>
+                        <p>This will run the flask app locally and you can see changes from your computer</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</div>
+</div>
 {% endblock content %}
