just made container look nicer

--- a/templates/demopage.html
+++ b/templates/demopage.html
@@ -10,8 +10,8 @@
         </div>
     </div>
     
-    <!--Summary-->
-    <div class="ui container">
+    <!--Demo-->
+    <div class="ui container segment">
 
         <div class="ui bulleted list">
             <div class="item">
